# rux

./: .gitignore  Cargo.toml  SECURITY.md  run.sh  run_aarch64.sh  run_kvm.sh  rust-toolchain.toml  test.sh  test_cpus.sh
.cargo/: config.toml
crates/arch/: Cargo.toml
crates/arch/benches/: arch_bench.rs
crates/arch/src/: aarch64.rs  barrier.rs  cpu.rs  irq.rs  lib.rs  numa.rs  pte.rs  serial.rs  stack.rs  syscall.rs  timer.rs  tlb.rs  (+1 more)
crates/boot/: Cargo.toml
crates/boot-image/: Cargo.toml
crates/drivers/: Cargo.toml
crates/elf/: Cargo.toml
crates/elf/fuzz/: Cargo.toml
crates/elf/fuzz/fuzz_targets/: parse_elf.rs
crates/fs/: Cargo.toml
crates/ipc/: Cargo.toml
crates/kernel/: Cargo.toml  build.rs  linker-aarch64.ld  linker-x86_64.ld  x86_64-rux.json
crates/kernel/src/: boot.rs  cmdline.rs  cow.rs  deadline_queue.rs  demand_paging.rs  elf.rs  errno.rs  execargs.rs  fdtable.rs  fork.rs  idle.rs  kstate.rs  line_discipline.rs  main.rs  percpu.rs  perm.rs  pgtrack.rs  pipe.rs  posix_timer.rs  procfs_callbacks.rs  pty.rs  rootfs.rs  scheduler.rs  slab.rs  syscall_impl.rs  task_table.rs  tests.rs  tty.rs  uaccess.rs  wait.rs
crates/kernel/src/aarch64/: boot.S  context.rs  exception.S  exception.rs  gic.rs  init.rs  mod.rs  paging.rs  serial.rs  syscall.rs  timer.rs
crates/kernel/src/arch/: mod.rs
crates/kernel/src/arch/aarch64/: ap_entry.S  boot.S  console.rs  context.rs  devicetree.rs  exception.S  exception.rs  exit.rs  fork.rs  gic.rs  init.rs  loader.rs  mod.rs  paging.rs  psci.rs  rtc.rs  serial.rs  syscall.rs  task_switch.rs  timer.rs  uaccess.rs
crates/kernel/src/arch/native/: mod.rs
crates/kernel/src/arch/x86_64/: acpi.rs  ap_trampoline.S  apic.rs  boot.S  console.rs  context.rs  exit.rs  fork.rs  gdt.rs  idt.rs  init.rs  loader.rs  mod.rs  multiboot.rs  paging.rs  pit.rs  rtc.rs  serial.rs  syscall.rs  task_switch.rs  uaccess.rs
crates/kernel/src/syscall/: file.rs  fs_ops.rs  helpers.rs  linux.rs  memory.rs  mod.rs  mount.rs  posix.rs  process.rs  signal.rs  socket.rs
crates/kernel/src/syscall_impl/: linux.rs  mod.rs  posix.rs
crates/kernel/src/x86_64/: boot.S  context.rs  idt.rs  init.rs  mod.rs  multiboot.rs  paging.rs  pit.rs  serial.rs  syscall.rs
crates/klib/: Cargo.toml
crates/mm/: Cargo.toml
crates/mm/fuzz/: Cargo.toml
crates/mm/fuzz/fuzz_targets/: buddy.rs  vma.rs
crates/net/: Cargo.toml
crates/proc/: Cargo.toml
crates/proc/fuzz/: Cargo.toml
crates/proc/fuzz/fuzz_targets/: fdtable.rs  pidbitmap.rs  signals.rs  sigqueue.rs
crates/sched/: Cargo.toml
crates/sched/fuzz/: Cargo.toml
crates/sched/fuzz/fuzz_targets/: cfs.rs  eevdf.rs  rbtree.rs
crates/sync/: Cargo.toml
crates/syscall/: Cargo.toml
crates/vfs/: Cargo.toml
crates/vfs/fuzz/: Cargo.toml
crates/vfs/fuzz/fuzz_targets/: ramfs.rs
docs/syscalls/: capabilities.md  debugging.md  directories.md  epoll.md  eventfd.md  file-descriptors.md  file-metadata.md  filesystem.md  futex.md  index.md  io-uring.md  memory.md  misc.md  namespaces.md  permissions.md  pidfd.md  pipes.md  poll-select.md  posix-ipc-message-queues.md  posix-ipc-semaphores.md  posix-ipc-shared-memory.md  process-groups.md  process.md  resource-limits.md  scheduling.md  security.md  signals.md  sockets.md  splice.md  system-info.md  time.md  timerfd.md  user-group-ids.md  xattrs.md
initramfs/: .gitignore  build.sh
rootfs/: build.sh  build_alpine.sh  build_debian.sh
tests/: mutation_baseline.txt  perf_history.csv
tests/golden/: syscall_conf_linux.txt
tools/: coverage_report.py  debug_qemu.sh  diag_ruby_sigsegv.sh  mutants.sh  perf_check.py  perf_probe.py  regen_golden.sh  syscall_conf.py
user/: Makefile  auxv_aarch64.elf  auxv_x86_64.elf  busybox_aarch64  cat_aarch64.S  cat_aarch64.elf  cat_x86_64.S  cat_x86_64.elf  count_aarch64.S  count_aarch64.elf  count_x86_64.S  count_x86_64.elf  dynhello.c  dynhello_aarch64.elf  dynhello_x86_64.elf  echo_aarch64.S  echo_aarch64.elf  echo_x86_64.S  echo_x86_64.elf  hello_aarch64.S  hello_aarch64.elf  hello_x86_64.S  hello_x86_64.elf  ld-musl-aarch64.so.1  ld-musl-x86_64.so.1  ls_aarch64.S  ls_aarch64.elf  ls_x86_64.S  ls_x86_64.elf  mkfile_aarch64.S  mkfile_aarch64.elf  mkfile_x86_64.S  mkfile_x86_64.elf  rm_aarch64.S  rm_aarch64.elf  rm_x86_64.S  rm_x86_64.elf  rux-box_aarch64.elf  rux-box_x86_64.elf  shell_aarch64.S  (+17 more)
user/auxv/: Cargo.toml
user/rustrt/: Cargo.toml
user/rux-box/: Cargo.toml
user/stat/: Cargo.toml
(+135 files in other folders)
