[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/sched/fuzz", "crates/proc/fuzz", "crates/mm/fuzz", "crates/vfs/fuzz", "crates/boot-image"]
default-members = ["crates/*"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false

[profile.dev]
opt-level = 1
panic = "abort"
