[package]
name = "rux-kernel"
version = "0.8.0"
edition = "2021"

[features]
default = ["net"]
native = []
net = ["rux-net"]

[dependencies]
rux-klib = { path = "../klib" }
rux-arch = { path = "../arch" }
rux-boot = { path = "../boot" }
rux-mm = { path = "../mm" }
rux-sched = { path = "../sched" }
rux-proc = { path = "../proc" }
rux-fs = { path = "../fs" }
rux-elf = { path = "../elf" }
rux-ipc = { path = "../ipc" }
rux-drivers = { path = "../drivers" }

rux-net = { path = "../net", optional = true }
