[package]
name = "rux-kernel"
version = "0.68.0"
edition = "2021"

[features]
default = ["net"]
native = []
net = ["rux-net"]
# Panic-then-spin: instead of Arch::exit(EXIT_FAILURE), halt the CPU
# in an infinite loop after printing the panic message. Enables gdb
# attach to inspect the crash state via tools/debug_qemu.sh. Build
# with `--features debug-spin` when you need this.
debug-spin = []

[dependencies]
rux-klib = { path = "../klib" }
rux-arch = { path = "../arch" }
rux-mm = { path = "../mm" }
rux-sched = { path = "../sched" }
rux-proc = { path = "../proc" }
rux-fs = { path = "../fs" }
rux-elf = { path = "../elf" }
rux-ipc = { path = "../ipc" }
rux-drivers = { path = "../drivers" }

rux-net = { path = "../net", optional = true }
