[package]
name = "rux-elf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rux-elf = { path = ".." }
rux-klib = { path = "../../klib" }
rux-mm = { path = "../../mm" }

[[bin]]
name = "parse_elf"
path = "fuzz_targets/parse_elf.rs"
doc = false
