[package]
name = "rux-mm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
rux-mm = { path = ".." }
rux-klib = { path = "../../klib" }

[[bin]]
name = "buddy"
path = "fuzz_targets/buddy.rs"
doc = false

[[bin]]
name = "vma"
path = "fuzz_targets/vma.rs"
doc = false
